fix: Fixed the spacing between the digits and the colon in the clock.

--- a/src/entities/time/ui/time.module.scss
+++ b/src/entities/time/ui/time.module.scss
@@ -19,13 +19,12 @@
   justify-content: space-around;
 
   height: 80%;
-  margin-right: 10px;
+  margin: 0 5px;
 
 }
 
 .dot {
   width: 15px;
   height: 15px;
-  margin: 5px 0;
   background-color: var(--color-light-100);
 }
